Some last time not commited notes

--- a/data/template/_topic-template.html
+++ b/data/template/_topic-template.html
@@ -160,6 +160,22 @@
         .icon-sun.active, .icon-moon.active {
           display: block;
         }
+        code {
+            background: #f4f4f4;
+            border: 1px solid #ddd;
+            border-left: 3px solid #f36d33;
+            color: #666;
+            page-break-inside: avoid;
+            font-family: monospace;
+            font-size: 12px;
+            line-height: 1;
+            margin-bottom: 1em;
+            max-width: 100%;
+            overflow: auto;
+            padding: 1em 1.5em;
+            display: block;
+            word-wrap: break-word;
+        }
     </style>
 </head>
 <body>
